--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "chess"
-version = "0.1.0"
+description = "Test chess program for fun and learning."
+authors = ["Erin A. <contact@the-system.eu.org>"]
+repository = "https://github.com/23marabi/chess"
+license = "CNPLv7+"
+version = "alpha-0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
